clusters/cl01tl/manifests/stalwart/HTTPRoute-http-route-stalwart.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-stalwart
  namespace: stalwart
  labels:
    app.kubernetes.io/name: http-route-stalwart
    app.kubernetes.io/instance: stalwart
    app.kubernetes.io/part-of: stalwart
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - stalwart.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: stalwart
          port: 80
          weight: 100
